--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ cursor: pointer;
 
 }
 
-/* 
+
 .main-content-button-container{
 text-align: center;}
 
@@ -267,15 +267,15 @@ text-align: center;}
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
   font-weight: 500;
-} */
+}
 
 
 
-/* .main-content-button a{
+.main-content-button a{
   text-decoration: none;
   color: #121919;
-} */
-/* 
+} 
+ 
 @media screen and (max-width: 775px) {
   #section2 button.grid-button {
     margin-left: 37%;
@@ -287,5 +287,20 @@ text-align: center;}
     padding: 10px 25px;
     margin-top: 5px;
   }
-} */
+}
 
+/* Footer Section */
+.footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  background-color: black;
+  padding: 25px 0px;
+}
+
+.footer a{
+  text-decoration: none;
+  color: white;
+  margin-left: 5%;
+}
