--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ cursor: pointer;
 
 @media screen and (max-width: 600px) {
   #section2 button.grid-button {
-    margin-left: 30%;
+    margin-left: 30% !important;
     
   }
 
